--- a/todo
+++ b/todo
@@ -1,9 +1,10 @@
 [] Сделать красиво
 [] Реализовать нормальный каталог
 [] Добавить весь ассортимент
+[] Добавить кнопку запроса контактов
+[] Сравнить меню команд телеграма с кнопками
 [] Реализовать обратную связь
 [] Реализовать систему оценок товара
 [] Реализовать систему отзывов
 [] Подрубить БД
 [] Реализовать систему заказов товара
-[] 
