--- a/todo
+++ b/todo
@@ -1,6 +1,6 @@
 [] Сделать красиво
 [] Реализовать нормальный каталог
-[] Добавить весь ассортимент
+[x] Добавить весь ассортимент
 [] Добавить кнопку запроса контактов
 [] Сравнить меню команд телеграма с кнопками
 [] Реализовать обратную связь
