--- a/todo
+++ b/todo
@@ -1,7 +1,4 @@
-[] Сделать красиво
-[] Реализовать нормальный каталог
-[x] Добавить весь ассортимент
-[] Добавить кнопку запроса контактов
+[] Сделать красивj
 [] Реализовать обратную связь
 [] Реализовать систему оценок товара
 [] Реализовать систему отзывов
